# url-shortener

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  conanfile.txt  database_schema.sql  docker-compose.yml
apps/: CMakeLists.txt  main.cpp
cmake/: CMakeHelpers.cmake
docs/: APIVersionHandler.md  DatabaseManager.md  FileRequestHandler.md  HTTPServer.md  IRequestHandler.md  KafkaReportingHttpServer.md  NotFoundHandler.md  ObjectPool.md  PostgresDBManager.md  URLRedirectHandler.md  URLShortenerHandler.md  index.md
include/: DatabaseManager.hpp  EnvironmentVariables.hpp  FileRequestHandler.hpp  HTTPServer.hpp  IRequestHandler.hpp  KafkaReportingHttpServer.hpp  ObjectPool.hpp  PostgresDBManager.hpp  RequestConstants.hpp  RequestData.hpp  TestClass.hpp  TestClass2.hpp  URLShortenerFactory.hpp  URLShortenerHandler.hpp  Utils.hpp
include/handlers/: APIVersionHandler.hpp  FileRequestHandler.hpp  IRequestHandler.hpp  NotFoundHandler.hpp  URLRedirectHandler.hpp  URLShortenerHandler.hpp
src/: CMakeLists.txt  DatabaseManager.cpp  FileRequestHandler.cpp  HTTPServer.cpp  IRequestHandler.cpp  KafkaReportingHttpServer.cpp  PostgresDBManager.cpp  RequestData.cpp  TestClass.cpp  TestClass2.cpp  URLShortenerFactory.cpp  URLShortenerHandler.cpp  Utils.cpp
src/handlers/: APIVersionHandler.cpp  FileRequestHandler.cpp  IRequestHandler.cpp  NotFoundHandler.cpp  URLRedirectHandler.cpp  URLShortenerHandler.cpp
tests/asset_dir/: file_1.txt  not_found_file.txt
tests/integration_tests/: CMakeLists.txt  DatabaseManagerTests.cpp  HTTPServerTests.cpp  URLShortenerFactoryTests.cpp  URLShortenerServerTests.cpp  exampleIntegrationTest.cpp
tests/unit_tests/: APIVersionHandlerTests.cpp  CMakeLists.txt  ExampleUnitTest.cpp  ExampleUnitTest2.cpp  FileRequestHandlerTests.cpp  NotFoundHandlerTests.cpp  URLRedirectHandlerTests.cpp  URLShortenerHandlerTests.cpp
tests/utils/: DatabaseManagerMock.hpp  DatabaseUtils.hpp  RAIIEnvs.hpp
web/: 404.html  index.html  main.html  script.js  some_file.txt  styles.css
